# Maavric_UART

./: CMakeLists.txt  README.md  arm-linux-gnueabihf-gcc-toolchain.cmake
src/: maavric_uart.c  serial.c  serial.h
